Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.2.3
-
None
-
Windows 10, Direct3D11 RHI
-
-
6ed6d0ab83 (qt/qtmultimedia/dev) 70324f3ab4 (qt/qtmultimedia/6.3) 8be9b6d214 (qt/qtmultimedia/6.2) 8be9b6d214 (qt/tqtc-qtmultimedia/6.2) 70324f3ab4 (qt/tqtc-qtmultimedia/6.3) 6ed6d0ab83 (qt/tqtc-qtmultimedia/dev) 70324f3ab4 (qt/qtmultimedia/6.3.0)
Description
Resuming a video after pause generates WMF error :
handleSessionEvent: serious error = -1072871856
According to VS Error Lookup, -1072871856 (0xC00D4650) - "This object has already been initialized and cannot be re-initialized at this time."
Steps to reproduce:
- open attached video resume_error.mp4
in standard Quick Multimedia Player example
- start to play it
- pause after some time
- resume
As result video stops rendering and error is displayed.
Attachments
Issue Links
- relates to
-
QTBUG-100181 QMediaPlayer::setPosition doesn't jump to precisely position while playing an FLAC file
-
- Closed
-
-
QTBUG-100854 [WMF] Crash on resuming playback of specific video
-
- Closed
-
-
QTBUG-88693 QMediaPlayer: serious error = -1072871856 on setPosition
-
- Closed
-
For Gerrit Dashboard: QTBUG-100835 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
401021,2 | Windows: Avoid WMF error with some specific video files | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
401054,3 | Windows: Avoid WMF error with some specific video files | 6.2 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
401055,3 | Windows: Avoid WMF error with some specific video files | 6.3 | qt/qtmultimedia | Status: MERGED | +2 | 0 |