Windows: Avoid WMF error with some specific video files

Some specific video files cause a WMF error when played, possibly due to
an issue in WMF, likely triggered by a non-standard setting in the
files. However, the video files play fine when the error is ignored,
which seems to cause no other issues.

Fixes: QTBUG-100835
Pick-to: 6.3 6.2
Change-Id: I7227c0bfbe3c1504e57ce3aec1c92c433879e618
Reviewed-by: Lars Knoll <lars.knoll@qt.io>